# IotServer

./: .gitignore  CMakeLists.txt  test  test.cpp  vcpkg.json
doc/: mysql.md
src/: main.cpp
src/data/: database.cpp  database.hpp
src/data/log/: log.cpp  log.hpp
